<resources>
    <string name="app_name">AndroidMasterCurso</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado es:</string>
    <string name="recalculate">Recalcular</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="descripcion_bajo_peso">Estas por debajo de lo optimo para tu peso y altura</string>

    <string name="title_peso_normal">Normal</string>
    <string name="descripcion_peso_normal">Estas en lo optimo de tu peso y altura</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="descripcion_sobrepeso">Estas por encima de lo optimo de tu peso y altura</string>

    <string name="error">Error, intente nuevamente</string>
</resources>